🔧Fixed the layout issues on the login page

--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,11 +1,10 @@
 .auth-container {
-    height: 100vh!important;
+    height: 96.6vh!important;
 }
 
 .first-background {
     background-image: url(/bg.svg);
     background-size: cover;
-    background-position: initial;
-    background-position-x: center;
-    background-position-y: top;
+    background-position: center;
+    background-attachment: fixed;
 }
